force-app/main/default/objects/Transaction__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>שם לקוח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>עסקאות</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>