force-app/main/default/objects/Transaction__c/fields/CDW__c.field-meta.xml
<CustomField>
    <fullName>CDW__c</fullName>
    <label>הקטנת השתתפות עצמית</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לא</fullName>
                <default>true</default>
                <label>לא</label>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>