force-app/main/default/objects/Transaction__c/fields/Club_Contract__c.field-meta.xml
<CustomField>
    <fullName>Club_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>תקנון מועדון</label>
    <type>Checkbox</type>
</CustomField>