force-app/main/default/objects/Transaction__c/fields/Date_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transaction__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>תאריך העסקה</label>
    <type>Date</type>
</CustomField>