force-app/main/default/objects/Transaction__c/fields/deal_client_phone__c.field-meta.xml
<CustomField>
    <fullName>deal_client_phone__c</fullName>
    <label>deal client phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>