force-app/main/default/objects/Transaction__c/fields/email_client_deal__c.field-meta.xml
<CustomField>
    <fullName>email_client_deal__c</fullName>
    <label>email client deal</label>
    <type>Email</type>
</CustomField>