force-app/main/default/objects/Transaction__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>מוצר</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>קורס בסיסי</fullName>
            </value>
            <value>
                <fullName>קורס ASA בארץ</fullName>
            </value>
            <value>
                <fullName>קורס ASA בחול</fullName>
            </value>
            <value>
                <fullName>משיט 30</fullName>
            </value>
            <value>
                <fullName>charter</fullName>
                <label>צ&apos;רטר בחו&quot;ל</label>
            </value>
            <value>
                <fullName>GMDSS</fullName>
            </value>
            <value>
                <fullName>קפריסין</fullName>
            </value>
            <value>
                <fullName>הפלגה מקצועית בחו&quot;ל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>