force-app/main/default/objects/Transaction__c/fields/MembeshipExpSoon__c.field-meta.xml
<CustomField>
    <fullName>MembeshipExpSoon__c</fullName>
    <formula>and(End_Date__c=today()+60,Points_Balance__c&gt;200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מנוי לקראת סיום</label>
    <type>Checkbox</type>
</CustomField>