force-app/main/default/objects/Transaction__c/fields/previous_subscription__c.field-meta.xml
<CustomField>
    <fullName>previous_subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>previous subscription</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>עסקאות</relationshipLabel>
    <relationshipName>followingsubscription</relationshipName>
    <type>Lookup</type>
</CustomField>