force-app/main/default/objects/Transaction__c/fields/previous_subscription_end_date__c.field-meta.xml
<CustomField>
    <fullName>previous_subscription_end_date__c</fullName>
    <formula>previous_subscription__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>previous subscription end date</label>
    <type>Date</type>
</CustomField>