force-app/main/default/objects/Transaction__c/fields/Remaining_hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_hours__c</fullName>
    <formula>Total_Hours__c  -  Total_Used_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>יתרת שעות</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>