force-app/main/default/objects/Transaction__c/fields/remarks__c.field-meta.xml
<CustomField>
    <fullName>remarks__c</fullName>
    <label>הערות פנימיות</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>