force-app/main/default/objects/Transaction__c/fields/Subscripption_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscripption_Type__c</fullName>
    <label>סוג  מנוי</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Hours</fullName>
                <label>בנק שעות</label>
            </value>
            <value>
                <fullName>Enrichment Ticket</fullName>
                <label>כרטיסיית העשרה</label>
            </value>
            <value>
                <fullName>No Deal</fullName>
                <isActive>false</isActive>
                <label>No Deal</label>
            </value>
            <value>
                <fullName>One Time</fullName>
                <isActive>false</isActive>
                <label>חד פעמי</label>
            </value>
            <value>
                <fullName>Potential Deal</fullName>
                <isActive>false</isActive>
                <label>עסקה פוטנציאלית</label>
            </value>
            <value>
                <fullName>Periodic</fullName>
                <isActive>false</isActive>
                <label>תקופתי</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>