force-app/main/default/objects/Transaction__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>סה&quot;כ נקודות</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>