force-app/main/default/objects/Transaction__c/fields/Total_Used_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Used_Hours__c</fullName>
    <label>סה&quot;כ שעות שנוצלו</label>
    <summarizedField>Cruise__c.Hidden_Total_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Cruise__c.Status__c</field>
        <operation>notEqual</operation>
        <value>מבוטלת</value>
    </summaryFilterItems>
    <summaryForeignKey>Cruise__c.Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>