force-app/main/default/objects/Transaction__c/recordTypes/Points.recordType-meta.xml
<RecordType>
    <fullName>Points</fullName>
    <active>true</active>
    <label>נקודות</label>
</RecordType>