force-app/main/default/objects/Transaction__c/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>false</active>
    <label>מוצרים אחרים</label>
</RecordType>