force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Transaction_Number__c</columns>
    <columns>NAME</columns>
    <columns>Remaining_hours__c</columns>
    <columns>weekday__c</columns>
    <columns>weekend__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>